macro/tests/fails/no_args.stderr
error: colored! macro can't be called without arguments
 --> $DIR/no_args.rs:4:5
  |
4 |     colored!();
  |     ^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
